// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BillingEmptyState > Snapshot tests > should match snapshot with action button 1`] = `
<output
  aria-label="No hay facturas"
  class="flex flex-col items-center justify-center px-6 py-12 text-center"
>
  <div
    class="mb-4"
  >
    <svg
      aria-hidden="true"
      class="h-16 w-16 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Inbox
      </title>
      <path
        d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </div>
  <h3
    class="mb-2 font-semibold text-gray-900 text-xl"
  >
    No hay facturas
  </h3>
  <p
    class="mb-6 max-w-md text-gray-600"
  >
    Tus facturas aparecerán aquí cuando realices un pago
  </p>
  <a
    aria-label="Ver planes"
    class="inline-flex items-center gap-2 rounded-lg bg-blue-600 px-6 py-3 font-medium text-white transition-colors duration-200 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
    href="/precios"
  >
    Ver planes
    <svg
      aria-hidden="true"
      class="h-5 w-5"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17 8l4 4m0 0l-4 4m4-4H3"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </a>
</output>
`;

exports[`BillingEmptyState > Snapshot tests > should match snapshot with all props 1`] = `
<output
  aria-label="Título completo"
  class="flex flex-col items-center justify-center px-6 py-12 text-center"
>
  <div
    class="mb-4"
  >
    <svg
      data-testid="custom-icon"
    >
      <title>
        Custom
      </title>
    </svg>
  </div>
  <h3
    class="mb-2 font-semibold text-gray-900 text-xl"
  >
    Título completo
  </h3>
  <p
    class="mb-6 max-w-md text-gray-600"
  >
    Descripción completa
  </p>
  <a
    aria-label="Acción completa"
    class="inline-flex items-center gap-2 rounded-lg bg-blue-600 px-6 py-3 font-medium text-white transition-colors duration-200 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
    href="/path-completo"
  >
    Acción completa
    <svg
      aria-hidden="true"
      class="h-5 w-5"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17 8l4 4m0 0l-4 4m4-4H3"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
  </a>
</output>
`;

exports[`BillingEmptyState > Snapshot tests > should match snapshot with custom icon 1`] = `
<output
  aria-label="No hay facturas"
  class="flex flex-col items-center justify-center px-6 py-12 text-center"
>
  <div
    class="mb-4"
  >
    <svg
      data-testid="custom-icon"
    >
      <title>
        Custom
      </title>
    </svg>
  </div>
  <h3
    class="mb-2 font-semibold text-gray-900 text-xl"
  >
    No hay facturas
  </h3>
  <p
    class="mb-6 max-w-md text-gray-600"
  >
    Tus facturas aparecerán aquí cuando realices un pago
  </p>
</output>
`;

exports[`BillingEmptyState > Snapshot tests > should match snapshot with default props 1`] = `
<output
  aria-label="No hay facturas"
  class="flex flex-col items-center justify-center px-6 py-12 text-center"
>
  <div
    class="mb-4"
  >
    <svg
      aria-hidden="true"
      class="h-16 w-16 text-gray-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Inbox
      </title>
      <path
        d="M20 13V6a2 2 0 00-2-2H6a2 2 0 00-2 2v7m16 0v5a2 2 0 01-2 2H6a2 2 0 01-2-2v-5m16 0h-2.586a1 1 0 00-.707.293l-2.414 2.414a1 1 0 01-.707.293h-3.172a1 1 0 01-.707-.293l-2.414-2.414A1 1 0 006.586 13H4"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.5"
      />
    </svg>
  </div>
  <h3
    class="mb-2 font-semibold text-gray-900 text-xl"
  >
    No hay facturas
  </h3>
  <p
    class="mb-6 max-w-md text-gray-600"
  >
    Tus facturas aparecerán aquí cuando realices un pago
  </p>
</output>
`;
